envs/staging/apps/brc-advanced-search/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: brc-advanced-search
  namespace: brc-advanced-search
spec:
  selector:
    app: brc-advanced-search
  ports:
    - name: http
      port: 80
      targetPort: 3000
