envs/staging/apps/brc-advanced-search/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: brc-advanced-search
  namespace: brc-advanced-search
  annotations:
    cert-manager.io/cluster-issuer: freeipa-acme
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - brc-advanced-search.staging.ibid.lan
      secretName: brc-advanced-search-tls
  rules:
    - host: brc-advanced-search.staging.ibid.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: brc-advanced-search
                port:
                  number: 80
